Frontend/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: frontend
  type: ClusterIP
  ports:
  - port: 5173
    targetPort: 5173
    protocol: TCP
